--- a/my_rust/Cargo.toml
+++ b/my_rust/Cargo.toml
@@ -5,5 +5,12 @@ authors = ["Vitah <linw1225@gmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+
+[[bin]]
+name = "hello_world"
+path = "src/hello_world.rs"
+
+[[bin]]
+name = "hello_vitah"
+path = "src/hello_vitah.rs"
