--- a/my_c/CMakeLists.txt
+++ b/my_c/CMakeLists.txt
@@ -3,6 +3,7 @@ project(my_c C)
 
 set(CMAKE_C_STANDARD 11)
 
+# GLOB_RECURSE会自动遍历工程跟目录下的所有文件目录
 file (GLOB_RECURSE files *.c)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
