--- a/my_c/CMakeLists.txt
+++ b/my_c/CMakeLists.txt
@@ -4,9 +4,9 @@ project(my_c C)
 set(CMAKE_C_STANDARD 11)
 
 # GLOB_RECURSE会自动遍历工程跟目录下的所有文件目录
-file (GLOB_RECURSE files *.c)
+file(GLOB_RECURSE files *.c)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable (${exe} ${file})
-    message (\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
+    add_executable(${exe} ${file} unp/inet_pton.c)
+    message(\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
 endforeach ()
