--- a/my_c/CMakeLists.txt
+++ b/my_c/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_C_STANDARD 11)
 file(GLOB_RECURSE files *.c)
 foreach (file ${files})
     string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable(${exe} ${file} unp/inet_pton.c)
+    add_executable(${exe} ${file})
     message(\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
 endforeach ()
