--- a/my_c/CMakeLists.txt
+++ b/my_c/CMakeLists.txt
@@ -1,12 +1,15 @@
 cmake_minimum_required(VERSION 3.19)
 project(my_c C)
-
 set(CMAKE_C_STANDARD 11)
 
-# GLOB_RECURSE会自动遍历工程跟目录下的所有文件目录
-file(GLOB_RECURSE files *.c)
-foreach (file ${files})
-    string(REGEX REPLACE ".+/(.+)\\..*" "\\1" exe ${file})
-    add_executable(${exe} ${file})
-    message(\ \ \ \ --\ src/${exe}.c\ will\ be\ compiled\ to\ bin/${exe})
-endforeach ()
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./unp/chapter01)
+add_executable(echo_time_tcp_srv unp/chapter01/echo_time_tcp_srv.c)
+add_executable(get_time_tcp_cli unp/chapter01/get_time_tcp_cli.c)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./unp/chapter04)
+add_executable(echo_time_fork_tcp_srv unp/chapter04/echo_time_fork_tcp_srv.c)
+add_executable(use_connect unp/chapter04/use_connect.c)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./unp/chapter05)
+add_executable(tcp_srv_01 unp/chapter05/tcp_srv_01.c)
+add_executable(tcp_cli_01 unp/chapter05/tcp_cli_01.c)
