Feat: 封装公用的函数

--- a/my_c/CMakeLists.txt
+++ b/my_c/CMakeLists.txt
@@ -2,12 +2,15 @@ cmake_minimum_required(VERSION 3.19)
 project(my_c C)
 set(CMAKE_C_STANDARD 11)
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unp/lib unp.out)
+
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./unp/chapter01)
 add_executable(echo_time_tcp_srv unp/chapter01/echo_time_tcp_srv.c)
 add_executable(get_time_tcp_cli unp/chapter01/get_time_tcp_cli.c)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./unp/chapter04)
 add_executable(echo_time_fork_tcp_srv unp/chapter04/echo_time_fork_tcp_srv.c)
+
 add_executable(use_connect unp/chapter04/use_connect.c)
 add_executable(use_inet_pton unp/chapter04/use_inet_pton.c)
 
