--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -2,6 +2,13 @@ cmake_minimum_required(VERSION 3.19)
 project(c C)
 set(CMAKE_C_STANDARD 11)
 
+# apue
+#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/apue/lib apue.out)
+
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./apue/chapter10)
+add_executable(catch_sigusr apue/chapter10/catch_sigusr.c)
+
+# unp
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./other)
 add_executable(get_timestamp other/get_timestamp.c)
 add_executable(use_fork other/use_fork.c)
