--- a/c/docker/docker-compose.yml
+++ b/c/docker/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3'
 
 services:
-  centos:
+  ubuntu:
     build:
-      context: ./centos
+      context: ./ubuntu
     volumes:
       - ${APP_CODE_PATH_HOST}:${APP_CODE_PATH_CONTAINER}
     tty: true
